--- a/00基础/4.html
+++ b/00基础/4.html
@@ -7,12 +7,36 @@
   <script src="https://unpkg.com/vue@next"></script>
 </head>
 <body>
-  <div id=''>
-
+  <div id='todo-list-app'>
+    <ol>
+      <todo-item
+        v-for='item in groceryList'  
+        v-bind:todo='item'
+        v-bind:key='item.key'
+      ></todo-item>
+    </ol>
   </div>
-
   <script>
+    // 应用&组件实例
+    const TodoList = {
+      data() {
+        return {
+          groceryList: [
+            { id: 0, text: 'Vegetables' },
+            { id: 1, text: 'Cheese' },
+            { id: 2, text: 'Whatever hhh ...'}
+          ]
+        }
+      }
+    }
+    const app = Vue.createApp(TodoList);
+    
+    app.component('todo-item', {
+      props: ['todo'],
+      template: `<li>{{ todo.text }}</li>`
+    })
 
+    app.mount('#todo-list-app')
   </script>
 </body>
 </html>
