--- a/00基础/8.html
+++ b/00基础/8.html
@@ -7,12 +7,61 @@
   <script src="https://unpkg.com/vue@next"></script>
 </head>
 <body>
-  <div id=''>
-
+  <div id='test'>
+    <p>Has published books:</p>
+    <span>{{ publishedBooksMessage }}</span>
+    <hr>
+    <p>
+      Ask a yes/no question:
+      <input v-model="question" />
+    </p>
+    <p>{{ answer }}</p>
   </div>
-
+  <script src="https://cdn.jsdelivr.net/npm/axios@0.12.0/dist/axios.min.js"></script>
   <script>
-
+    Vue.createApp({
+      data() {
+        return {
+          author: {
+            name: 'John Doe',
+            books: [
+              'Vue 2 - Advanced Guide',
+              'Vue 3 - Basic Guide',
+              'Vue 4 - The Mystery'
+            ]
+          },
+          question: '',
+          answer: '...'
+        }
+      },
+      computed: {
+        // 计算属性的 getter
+        publishedBooksMessage() {
+          // `this` points to the vm instance
+          return this.author.books.length > 0 ? 'Yes' : 'No'
+        }
+      },
+      watch: {
+        question(newQuestion, oldQuestion){
+          if(newQuestion.indexOf('?') > -1){
+            this.getAnswer()
+          }
+        }
+      },
+      methods: {
+        getAnswer(){
+          this.answer = 'thinking...',
+          axios
+            .get('https://yesno.wtf/api')
+            .then(res => {
+              this.answer = res.data.answer
+            })
+            .catch(err => {
+              this.answer = 'err'
+            })
+        }
+      },
+    }).mount('#test')
   </script>
 </body>
 </html>
