--- a/深入组件/2.html
+++ b/深入组件/2.html
@@ -7,22 +7,11 @@
   <script src="https://unpkg.com/vue@next"></script>
 </head>
 <body>
-  <div id='test'>
+  <div id=''>
 
   </div>
 
   <script>
-  // props
-  // string number boolean array object fuction promise
-  const Test = {
-    data() {
-      return {
-        
-      }
-    },
-  }
-  const app = Vue.createApp(Test);
-  app.mount('#test')
 
   </script>
 </body>
