--- a/02过渡&动画/0.html
+++ b/02过渡&动画/0.html
@@ -4,16 +4,76 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      button {
+        background: #d93419;
+        border-radius: 4px;
+        display: inline-block;
+        border: none;
+        padding: 0.75rem 1rem;
+        margin: 20px 10px 0 0;
+        text-decoration: none;
+        color: #ffffff;
+        font-family: sans-serif;
+        font-size: 1rem;
+        cursor: pointer;
+        text-align: center;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+      }
+
+      button:focus {
+        outline: 1px dashed #fff;
+        outline-offset: -3px;
+      }
+      .shake {
+        animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+        transform: translate3d(0, 0, 0);
+        backface-visibility: hidden;
+        perspective: 1000px;
+      }
+
+      @keyframes shake {
+        10%,
+        90% {
+          transform: translate3d(-1px, 0, 0);
+        }
+
+        20%,
+        80% {
+          transform: translate3d(2px, 0, 0);
+        }
+
+        30%,
+        50%,
+        70% {
+          transform: translate3d(-4px, 0, 0);
+        }
+
+        40%,
+        60% {
+          transform: translate3d(4px, 0, 0);
+        }
+      }
+    </style>
     <script src="https://unpkg.com/vue@next"></script>
   </head>
   <body>
-    <div id="test"></div>
+    <div id="test">
+      Push this button to do something you shouldn't be doing:<br />
+      <div :class="{ shake: noActivated }">
+        <button @click="noActivated = true">click me</button>
+        <span v-if="noActivated">Oh no!</span>
+      </div>
+    </div>
 
     <script>
-      // 提供 注入
+      // 基于class的动画
       const Test = {
         data() {
-          return {};
+          return {
+            noActivated: false,
+          };
         },
       };
       const app = Vue.createApp(Test);
