--- a/02过渡&动画/2.html
+++ b/02过渡&动画/2.html
@@ -4,16 +4,50 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      .button {
+        background: #1b8f5a;
+        transition: background 0.25s ease-in;
+        border-radius: 4px;
+        display: inline-block;
+        border: none;
+        padding: 0.75rem 1rem;
+        margin: 0;
+        text-decoration: none;
+        color: #ffffff;
+        font-family: sans-serif;
+        font-size: 1rem;
+        cursor: pointer;
+        text-align: center;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+      }
+
+      button:hover,
+      button:focus {
+        transition: background 0.3s ease-out;
+        background: #3eaf7c;
+      }
+
+      button:focus {
+        outline: 1px solid #fff;
+        outline-offset: -4px;
+      }
+    </style>
     <script src="https://unpkg.com/vue@next"></script>
   </head>
   <body>
-    <div id="test"></div>
+    <div id="test">
+      <button class="button">{{ message }}</button>
+    </div>
 
     <script>
       // 提供 注入
       const Test = {
         data() {
-          return {};
+          return {
+            message: 'Hover Me!',
+          };
         },
       };
       const app = Vue.createApp(Test);
