--- a/02过渡&动画/8.html
+++ b/02过渡&动画/8.html
@@ -7,13 +7,69 @@
     <script src="https://unpkg.com/vue@next"></script>
   </head>
   <body>
-    <div id="test"></div>
-
+    <div id="test">
+      <input v-model="query" />
+      <transition-group
+        name="staggered-face"
+        tag="ul"
+        :css="false"
+        @before-enter="beforeEnter"
+        @enter="enter"
+        @leave="leave"
+      >
+        <li 
+          v-for="(item, index) in computedList"
+          :key="item.msg"
+          :data-index="index"      
+        >
+          {{item.msg}}
+        </li>
+      </transition-group>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js"></script>
     <script>
-      // 提供 注入
+      // 列表的交错过渡
       const Test = {
         data() {
-          return {};
+          return {
+            query: '',
+            list: [
+              {msg: "Bruce Lee"},
+              {msg: "Jackie Chan"},
+              {msg: "Chuck Norris"},
+              {msg: "Jet Li"},
+              {msg: "Kung Fury"}
+            ]
+          };
+        },
+        computed:{
+          computedList(){
+            return this.list.filter(item => {
+              return item.msg.toLowerCase().indexOf(this.query.toLowerCase()) !== -1
+            })
+          }
+        },
+        methods: {
+          beforeEnter(el){
+            el.style.opacity = 0;
+            el.style.height = 0;
+          },
+          enter(el, done){
+            gsap.to(el,{
+              opacity: 1,
+              height: '16px',
+              delay: el.dataset.index * 0.15,
+              onComplete: done
+            })
+          },
+          leave(el, done){
+            gsap.to(el, {
+              opacity: 0,
+              height: 0,
+              delay: el.dataset.index * 0.15,
+              onComplete: done
+            })
+          }
         },
       };
       const app = Vue.createApp(Test);
