--- a/02过渡&动画/7.html
+++ b/02过渡&动画/7.html
@@ -4,16 +4,64 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      .list-item{
+        transition: all 0.8s ease;
+        display: inline-block;
+        margin-right: 10px;
+      }
+      /* .list-enter-active,
+      .list-leave-active{
+        transition: all 1s ease;
+      } */
+      .list-enter-from,
+      .list-leave-to{
+        opacity: 0;
+        transform: translateY(30px);
+      }
+      .list-move{
+        transition: all 0.8s ease;
+      }
+      .list-leave-active {
+        position: absolute;
+      }
+    </style>
     <script src="https://unpkg.com/vue@next"></script>
   </head>
   <body>
-    <div id="test"></div>
-
+    <div id="test">
+      <button @click="add">Add</button>
+      <button @click="remove">Remove</button>
+      <button @click="shuffle">Shuffle</button>
+      <transition-group name="list" tag="p">
+        <span v-for="item in items" :key="item" class="list-item">
+          {{item}}
+        </span>
+      </transition>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.min.js"></script>
     <script>
       // 提供 注入
       const Test = {
         data() {
-          return {};
+          return {
+            items: [1, 2, 3, 4, 5, 6, 7, 8, 9],
+            nextNum: 10
+          };
+        },
+        methods: {
+          randomIndex(){
+            return Math.floor(Math.random() * this.items.length)
+          },
+          add(){
+            this.items.splice(this.randomIndex(), 0, this.nextNum++)
+          },
+          remove(){
+            this.items.splice(this.randomIndex(), 1)
+          },
+          shuffle(){
+            this.items = _.shuffle(this.items)
+          }
         },
       };
       const app = Vue.createApp(Test);
