--- a/03可复用&组合/11.html
+++ b/03可复用&组合/11.html
@@ -7,12 +7,10 @@
     <script src="https://unpkg.com/vue@next"></script>
   </head>
   <body>
-    <div id="test"></div>
+    <div id="test">11</div>
 
     <script>
-      // v-model 指令扩展为 modelValue 和 onUpdate:modelValue
-      // v-on 要处理 click 事件，prop名称应该是 onClick
-      // 对于 .passive 、 .capture和 .once 事件修饰符 如{handler: this.doThisOne, once: true}
+      //
       const Test = {
         data() {
           return {};
