--- a/03可复用&组合/7.html
+++ b/03可复用&组合/7.html
@@ -9,9 +9,7 @@
   <body>
     <div id="test">
       <h1>
-        <a name="hello-world" href="#hello-world">
-          Hello world!
-        </a>
+        <a name="hello-world" href="#hello"> Hello world! </a>
       </h1>
       <anchored-heading :level="1">Hello world!1</anchored-heading>
       <anchored-heading :level="1">Hello world!2</anchored-heading>
@@ -20,11 +18,23 @@
       <anchored-heading :level="1">Hello world!5</anchored-heading>
       <anchored-heading :level="1">Hello world!6</anchored-heading>
       <anchored-heading :level="1">Hello world!7</anchored-heading>
-      <anchored-heading :level="1" id="hello-word">Hello world!8</anchored-heading>
+      <anchored-heading :level="1">Hello world!4</anchored-heading>
+      <anchored-heading :level="1">Hello world!5</anchored-heading>
+      <anchored-heading :level="1">Hello world!6</anchored-heading>
+      <anchored-heading :level="1">Hello world!7</anchored-heading>
+      <anchored-heading :level="1">Hello world!4</anchored-heading>
+      <anchored-heading :level="1">Hello world!5</anchored-heading>
+      <anchored-heading :level="1">Hello world!6</anchored-heading>
+      <anchored-heading :level="1">Hello world!7</anchored-heading>
+      <anchored-heading :level="1">Hello world!4</anchored-heading>
+      <anchored-heading :level="1">Hello world!5</anchored-heading>
+      <anchored-heading :level="1">Hello world!6</anchored-heading>
+      <anchored-heading :level="1">Hello world!7</anchored-heading>
+      <anchored-heading :level="1" id="hello">Hello world!8</anchored-heading>
     </div>
 
     <script>
-      // 
+      //
       const Test = {
         data() {
           return {};
@@ -33,19 +43,16 @@
       const app = Vue.createApp(Test);
       app.component('anchored-heading', {
         render() {
-          const {h} = Vue;
-          return h(
-            'h' + this.level,
-            this.$slots.default()
-          )
+          const { h } = Vue;
+          return h('h' + this.level, this.$slots.default());
         },
-        props:{
-          level:{
-            type:Number,
+        props: {
+          level: {
+            type: Number,
             required: true,
-          }
-        }
-      })
+          },
+        },
+      });
       app.mount('#test');
     </script>
   </body>
