--- a/03可复用&组合/9.html
+++ b/03可复用&组合/9.html
@@ -7,16 +7,51 @@
     <script src="https://unpkg.com/vue@next"></script>
   </head>
   <body>
-    <div id="test"></div>
+    <div id="test">
+      <span>{{i18n.greetings.hi}}</span>
+      <span>{{$translate('greetings.hi')}}</span>
+    </div>
 
     <script>
-      // 
+      //
+      const i18nPlugin = {
+        install(app, options) {
+          console.log(i18n);
+          app.config.globalProperties.$translate = (key) => {
+            return key.split('.').reduce((o, i) => {
+              if (o) {
+                return o[i];
+              }
+            }, this.i18n);
+            // return options.greetings[key];
+          };
+          app.provide('i18n', options);
+          app.directive('my-directive', {
+            bind(el, binding, vnode, oldnode) {},
+          });
+        },
+      };
       const Test = {
+        inject: ['i18n'],
         data() {
           return {};
         },
+        computed: {
+          hello() {
+            return this.$translate('hi');
+          },
+        },
+        mounted() {
+          console.log(this.i18n);
+        },
       };
       const app = Vue.createApp(Test);
+      const i18nStrings = {
+        greetings: {
+          hi: 'Hallo!',
+        },
+      };
+      app.use(i18nPlugin, i18nStrings);
       app.mount('#test');
     </script>
   </body>
